--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -171,11 +171,13 @@
     <ClCompile Include="src\Light.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Mesh.cpp" />
+    <ClCompile Include="src\Mode.cpp" />
     <ClCompile Include="src\Model.cpp" />
     <ClCompile Include="src\Motion.cpp" />
     <ClCompile Include="src\Object.cpp" />
     <ClCompile Include="src\Object2D.cpp" />
     <ClCompile Include="src\Object3D.cpp" />
+    <ClCompile Include="src\ObjectList.cpp" />
     <ClCompile Include="src\ObjectX.cpp" />
     <ClCompile Include="src\Particle.cpp" />
     <ClCompile Include="src\Player.cpp" />
@@ -213,11 +215,13 @@
     <ClInclude Include="src\Light.h" />
     <ClInclude Include="src\main.h" />
     <ClInclude Include="src\Mesh.h" />
+    <ClInclude Include="src\Mode.h" />
     <ClInclude Include="src\Model.h" />
     <ClInclude Include="src\Motion.h" />
     <ClInclude Include="src\Object.h" />
     <ClInclude Include="src\Object2D.h" />
     <ClInclude Include="src\Object3D.h" />
+    <ClInclude Include="src\ObjectList.h" />
     <ClInclude Include="src\ObjectX.h" />
     <ClInclude Include="src\Particle.h" />
     <ClInclude Include="src\Player.h" />
