--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -151,7 +151,6 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="CameraGame.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -196,10 +195,10 @@
     <ClCompile Include="src\UI.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="CameraGame.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Camera.h" />
+    <ClInclude Include="src\CameraGame.h" />
     <ClInclude Include="src\Command.h" />
     <ClInclude Include="src\Controller.h" />
     <ClInclude Include="src\DebugProc.h" />
