--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="src\Item_Speed.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="src\CameraGame.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h">
