--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -194,6 +194,7 @@
     <ClCompile Include="src\Time.cpp" />
     <ClCompile Include="src\Title.cpp" />
     <ClCompile Include="src\UI.cpp" />
+    <ClCompile Include="src\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Application.h" />
@@ -242,6 +243,7 @@
     <ClInclude Include="src\Time.h" />
     <ClInclude Include="src\Title.h" />
     <ClInclude Include="src\UI.h" />
+    <ClInclude Include="src\utility.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
