--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="src\Result.cpp" />
     <ClCompile Include="src\Shadow.cpp" />
     <ClCompile Include="src\SkillGauge.cpp" />
+    <ClCompile Include="src\SkillSelect.cpp" />
     <ClCompile Include="src\sound.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\Time.cpp" />
@@ -245,6 +246,7 @@
     <ClInclude Include="src\Result.h" />
     <ClInclude Include="src\Shadow.h" />
     <ClInclude Include="src\SkillGauge.h" />
+    <ClInclude Include="src\SkillSelect.h" />
     <ClInclude Include="src\sound.h" />
     <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\Time.h" />
