--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -156,6 +156,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BgStage.cpp" />
     <ClCompile Include="src\Application.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Camera.cpp" />
@@ -186,6 +187,7 @@
     <ClCompile Include="src\Object3D.cpp" />
     <ClCompile Include="src\ObjectList.cpp" />
     <ClCompile Include="src\ObjectX.cpp" />
+    <ClCompile Include="src\ObjectXOriginalList.cpp" />
     <ClCompile Include="src\Particle.cpp" />
     <ClCompile Include="src\Player.cpp" />
     <ClCompile Include="src\PlayerController.cpp" />
@@ -203,6 +205,7 @@
     <ClCompile Include="src\utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BgStage.h" />
     <ClInclude Include="src\Application.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Camera.h" />
@@ -236,6 +239,7 @@
     <ClInclude Include="src\Object3D.h" />
     <ClInclude Include="src\ObjectList.h" />
     <ClInclude Include="src\ObjectX.h" />
+    <ClInclude Include="src\ObjectXOriginalList.h" />
     <ClInclude Include="src\Particle.h" />
     <ClInclude Include="src\Player.h" />
     <ClInclude Include="src\PlayerController.h" />
