--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <ClCompile Include="BgStage.cpp" />
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\area.cpp" />
     <ClCompile Include="src\Block.cpp" />
     <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\CameraGame.cpp" />
@@ -208,6 +209,7 @@
   <ItemGroup>
     <ClInclude Include="BgStage.h" />
     <ClInclude Include="src\Application.h" />
+    <ClInclude Include="src\area.h" />
     <ClInclude Include="src\Block.h" />
     <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\CameraGame.h" />
