塗り強化アイテムの実装(設置はまだ)

--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="src\InputKeyBoard.cpp" />
     <ClCompile Include="src\inputmouse.cpp" />
     <ClCompile Include="src\Item.cpp" />
+    <ClCompile Include="src\Item_Paint.cpp" />
     <ClCompile Include="src\Item_Speed.cpp" />
     <ClCompile Include="src\Letter.cpp" />
     <ClCompile Include="src\Light.cpp" />
@@ -239,6 +240,7 @@
     <ClInclude Include="src\inputkeydata.h" />
     <ClInclude Include="src\inputmouse.h" />
     <ClInclude Include="src\Item.h" />
+    <ClInclude Include="src\Item_Paint.h" />
     <ClInclude Include="src\Item_Speed.h" />
     <ClInclude Include="src\Letter.h" />
     <ClInclude Include="src\Light.h" />
