--- a/C++Team001.vcxproj.filters
+++ b/C++Team001.vcxproj.filters
@@ -351,7 +351,7 @@
       <Filter>ソース ファイル\06_Game</Filter>
     </ClInclude>
     <ClInclude Include="src\StatusUI.h">
-      <Filter>ヘッダー ファイル</Filter>
+      <Filter>ソース ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
