テレポーター途中

--- a/C++Team001.vcxproj
+++ b/C++Team001.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="src\SkillSelect.cpp" />
     <ClCompile Include="src\sound.cpp" />
     <ClCompile Include="src\StatusUI.cpp" />
+    <ClCompile Include="src\teleport.cpp" />
     <ClCompile Include="src\Texture.cpp" />
     <ClCompile Include="src\Time.cpp" />
     <ClCompile Include="src\Title.cpp" />
@@ -269,6 +270,7 @@
     <ClInclude Include="src\SkillSelect.h" />
     <ClInclude Include="src\sound.h" />
     <ClInclude Include="src\StatusUI.h" />
+    <ClInclude Include="src\teleport.h" />
     <ClInclude Include="src\Texture.h" />
     <ClInclude Include="src\Time.h" />
     <ClInclude Include="src\Title.h" />
